--- a/style.css
+++ b/style.css
@@ -96,6 +96,15 @@ body * {
     cursor: pointer;
     box-shadow: 0px 10px 40px  -12px #00ff8052;
 }
+.passSenha {
+    color: #f0ffff94;
+    cursor: pointer;
+}
+.cadastro{
+    color: #f0ffff94;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 950px) {
     .card-login{
         width: 85%;
